--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,27 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: [3.9, 3.10, 3.11, 3.12, 3.13]
         include:
+          - os: ubuntu-latest
+            python-version: 3.9
+          - os: ubuntu-latest
+            python-version: 3.10
+          - os: ubuntu-latest
+            python-version: 3.11
+          - os: ubuntu-latest
+            python-version: 3.12
+          - os: ubuntu-latest
+            python-version: 3.13
+          - os: windows-latest
+            python-version: 3.9
+          - os: windows-latest
+            python-version: 3.10
+          - os: windows-latest
+            python-version: 3.11
+          - os: windows-latest
+            python-version: 3.12
+          - os: windows-latest
+            python-version: 3.13
           - os: macos-latest
             python-version: 3.9
           - os: macos-latest
