--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,36 +12,24 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         include:
-          - os: ubuntu-latest
-            python-version: 3.9
-          - os: ubuntu-latest
-            python-version: 3.10
-          - os: ubuntu-latest
-            python-version: 3.11
-          - os: ubuntu-latest
-            python-version: 3.12
-          - os: ubuntu-latest
-            python-version: 3.13
-          - os: windows-latest
-            python-version: 3.9
-          - os: windows-latest
-            python-version: 3.10
-          - os: windows-latest
-            python-version: 3.11
-          - os: windows-latest
-            python-version: 3.12
-          - os: windows-latest
-            python-version: 3.13
-          - os: macos-latest
-            python-version: 3.9
-          - os: macos-latest
-            python-version: 3.10
-          - os: macos-latest
-            python-version: 3.11
-          - os: macos-latest
-            python-version: 3.12
-          - os: macos-latest
-            python-version: 3.13
+          # Ubuntu 多版本
+          - os: ubuntu-latest; python-version: 3.9
+          - os: ubuntu-latest; python-version: 3.10
+          - os: ubuntu-latest; python-version: 3.11
+          - os: ubuntu-latest; python-version: 3.12
+          - os: ubuntu-latest; python-version: 3.13
+          # Windows 多版本
+          - os: windows-latest; python-version: 3.9
+          - os: windows-latest; python-version: 3.10
+          - os: windows-latest; python-version: 3.11
+          - os: windows-latest; python-version: 3.12
+          - os: windows-latest; python-version: 3.13
+          # macOS 多版本
+          - os: macos-latest; python-version: 3.9
+          - os: macos-latest; python-version: 3.10
+          - os: macos-latest; python-version: 3.11
+          - os: macos-latest; python-version: 3.12
+          - os: macos-latest; python-version: 3.13
 
     steps:
       - uses: actions/checkout@v4
@@ -60,16 +48,22 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y pkg-config libssl-dev
+          echo "OPENSSL_DIR=/usr" >> $GITHUB_ENV
+          echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig" >> $GITHUB_ENV
 
       - name: Install system dependencies (macOS)
         if: matrix.os == 'macos-latest'
         run: |
           brew install pkg-config openssl || true
+          echo "OPENSSL_DIR=$(brew --prefix openssl)" >> $GITHUB_ENV
+          echo "PKG_CONFIG_PATH=$(brew --prefix openssl)/lib/pkgconfig" >> $GITHUB_ENV
 
       - name: Install system dependencies (Windows)
         if: matrix.os == 'windows-latest'
         run: |
           choco install openssl.light pkgconfiglite -y
+          echo "OPENSSL_DIR=C:\\Program Files\\OpenSSL-Win64" >> $env:GITHUB_ENV
+          echo "PKG_CONFIG_PATH=C:\\Program Files\\OpenSSL-Win64\\lib\\pkgconfig" >> $env:GITHUB_ENV
 
       - name: Setup Python
         uses: actions/setup-python@v4
