--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,37 +13,37 @@ jobs:
         include:
           # Ubuntu 多版本
           - os: ubuntu-latest
-            python-version: 3.9
+            python-version: '3.9'
           - os: ubuntu-latest
-            python-version: 3.10
+            python-version: '3.10'
           - os: ubuntu-latest
-            python-version: 3.11
+            python-version: '3.11'
           - os: ubuntu-latest
-            python-version: 3.12
+            python-version: '3.12'
           - os: ubuntu-latest
-            python-version: 3.13
+            python-version: '3.13'
           # Windows 多版本
           - os: windows-latest
-            python-version: 3.9
+            python-version: '3.9'
           - os: windows-latest
-            python-version: 3.10
+            python-version: '3.10'
           - os: windows-latest
-            python-version: 3.11
+            python-version: '3.11'
           - os: windows-latest
-            python-version: 3.12
+            python-version: '3.12'
           - os: windows-latest
-            python-version: 3.13
+            python-version: '3.13'
           # macOS 多版本
           - os: macos-latest
-            python-version: 3.9
+            python-version: '3.9'
           - os: macos-latest
-            python-version: 3.10
+            python-version: '3.10'
           - os: macos-latest
-            python-version: 3.11
+            python-version: '3.11'
           - os: macos-latest
-            python-version: 3.12
+            python-version: '3.12'
           - os: macos-latest
-            python-version: 3.13
+            python-version: '3.13'
 
     steps:
       - uses: actions/checkout@v4
